# NJU-FLA-Project

./: .gitignore  CMakeLists.txt  README.md  submit.sh  test.txt
examples/: palindrome_detector_2tapes.tm  palindrome_detector_2tapes_verbose.txt
framework/: CMakeLists.txt  README.md
framework/turing-project/: main.cpp
programs/: case1.tm  case2.tm
turing-project/: main.cpp
turing-project/include/: TM.h  TM.hpp  Tapes.h  Tapes.hpp  error.hpp  exception.h  exception.hpp  parser.h  parser.hpp  transform.h  transform.hpp
turing-project/src/: TM.cpp  Tapes.cpp  exception.cpp  parser.cpp  transform.cpp
